Update 0162: First SPI write test of wall texture test image (wolfwall)

--- a/0162-2023-10-20.md
+++ b/0162-2023-10-20.md
@@ -53,7 +53,202 @@ Here's the chip on my breakout board:
 
 Connected with Bus Pirate v3.5:
 
-TBD
+![AT25SF081B SPI flash ROM chip connected to Bus Pirate v3.5](./i/0162-chip-and-buspirate.jpg)
+
+Running MPW8 Linux VM...
+
+```
+$ flashrom -L | fgrep -i AT25SF
+Atmel         AT25SF041              PREW            512  SPI       
+Atmel         AT25SF081              PREW           1024  SPI       
+Atmel         AT25SF161              PREW           2048  SPI       
+Atmel         AT25SF321              PR             4096  SPI
+```
+
+Chip is supported natively.
+
+Start watching kernel log (`dmesg -T --follow`) then plug in the Bus Pirate. So long as VirtualBox USB passthru is enabled for the Bus Pirate's FTDI Vendor/Dev ID, we should see this:
+```
+[Fri Oct 20 13:46:47 2023] usb 1-1: new full-speed USB device number 2 using ohci-pci
+[Fri Oct 20 13:46:47 2023] usb 1-1: New USB device found, idVendor=0403, idProduct=6001, bcdDevice= 6.00
+[Fri Oct 20 13:46:47 2023] usb 1-1: New USB device strings: Mfr=1, Product=2, SerialNumber=3
+[Fri Oct 20 13:46:47 2023] usb 1-1: Product: FT232R USB UART
+[Fri Oct 20 13:46:47 2023] usb 1-1: Manufacturer: FTDI
+[Fri Oct 20 13:46:47 2023] usb 1-1: SerialNumber: A5005DKE
+[Fri Oct 20 13:46:47 2023] usbcore: registered new interface driver usbserial_generic
+[Fri Oct 20 13:46:47 2023] usbserial: USB Serial support registered for generic
+[Fri Oct 20 13:46:47 2023] usbcore: registered new interface driver ftdi_sio
+[Fri Oct 20 13:46:47 2023] usbserial: USB Serial support registered for FTDI USB Serial Device
+[Fri Oct 20 13:46:47 2023] ftdi_sio 1-1:1.0: FTDI USB Serial Device converter detected
+[Fri Oct 20 13:46:47 2023] usb 1-1: Detected FT232RL
+[Fri Oct 20 13:46:47 2023] usb 1-1: FTDI USB Serial Device converter now attached to ttyUSB0
+```
+
+Install minicom, picocom, and screen: `sudo apt install minicom screen picocom`
+
+Make sure user is part of `dialout` group: `sudo adduser zerotoasic dialout` -- NOTE: Typically you should do a full VM restart after this, unless you want to be lazy and just reload groups: `newgrp dialout` -- BEWARE: This seems to reset recent bash command history.
+
+At this point I switched to my `ASIC-Ubuntu-2204` VM which has this stuff already set up.
+
+Direct TTY access to Bus Pirate, to test reading SPI flash ROM device ID. `picocom -b 115200 /dev/ttyUSB0` seems fine. **We can later use CTRL+A then CTRL+X to terminate.**
+
+1.  Hit enter, expect `HiZ>` prompt.
+2.  `m5` for SPI mode.
+3.  ENTER after each of: 4 1 2 1 2 2
+4.  `W` (capital) to turn on power
+5.  Read MFR/DEV ID: `{0x90 0 0 0]`:
+    ```
+    SPI>{0x90 0 0 0]
+    /CS ENABLED
+    WRITE: 0x9F READ: 0x00 
+    WRITE: 0x00 READ: 0x1F 
+    WRITE: 0x00 READ: 0x85 
+    WRITE: 0x00 READ: 0x01 
+    /CS DISABLED
+    SPI>
+    ```
+    *   MFR: 0x1F
+    *   DEV: 0x8501
+    *   This is consistent with what the datasheet says we should get for AT25SF081B.
+6.  Exit picocom: CTRL+A then CTRL+X
+
+Let's try a test read of the ROM:
+
+```bash
+cd ~/HOST_Documents
+SPICHIP=AT25SF081
+SPIPORT=buspirate_spi:dev=/dev/ttyUSB0,spispeed=2M,serialspeed=250000
+time flashrom -c $SPICHIP -p $SPIPORT -r AT25SF081B-blank.bin
+# It took 60 seconds.
+hexdump -C AT25SF081B-blank.bin
+```
+
+Contents are as expected for a blank device:
+```
+$ hexdump -C AT25SF081B-blank.bin
+00000000  ff ff ff ff ff ff ff ff  ff ff ff ff ff ff ff ff  |................|
+*
+00100000
+```
+
+I created a [test image](https://github.com/algofoogle/raybox-zero/blob/ew/assets/wolfwall1bit.psd) as [a PBM file (`wolfwall1bit.pbm`)](https://github.com/algofoogle/raybox-zero/blob/ac4385d5c7a4bf92f09e4a158f06ee3c4a700468/assets/wolfwall1bit.pbm) -- Photoshop creates a binary PBM (which is good) with a text header of variable length (which we want to get rid of). First 3 text lines of the file make up the header:
+
+![PBM image file header as ASCII text](./i/0162-pbm-header.png)
+
+NOTE: I discovered that Photoshop (or maybe the PBM 1-bit format) thinks a 1 bit is black, and a 0 bit is white, so I had to negate the image.
+
+We know this file should be 64*512 pixels, but &div;8 (for 8 pixels per byte), so 4096 total. Actual file size is 4106, so 4096-4106 is 10 bytes we need to get rid of. We can do that with:
+
+```bash
+dd if=wolfwall1bit.pbm of=wolfwall1bit.bin bs=1 skip=10
+```
+
+For reference, the first wall's texture image is the first 512 bytes of [the final 4096-byte binary file (`wolfwall1bit.bin`)](https://github.com/algofoogle/raybox-zero/blob/ew/assets/wolfwall1bit.bin):
+
+```
+> hexdump -C .\wolfwall1bit.bin | head -32
+00000000  00 00 00 00 00 00 00 00  11 ff ff ff e0 00 01 25  |...............%|
+00000010  65 ff ff ff e7 ff fe 10  f5 ff ff ff e7 ff ff ff  |e...............|
+00000020  f1 ff ff ff e7 ff ff ff  e5 ff ff ff e7 ff ff ff  |................|
+00000030  f1 ff ff ff e7 ff ff ff  d5 ff ff 7f e7 ff ff ff  |................|
+00000040  c1 08 02 00 87 ef eb ef  04 20 00 02 2b fd ff ff  |......... ..+...|
+00000050  a0 00 00 00 03 ff bf 2a  05 25 bf ff f3 55 50 80  |.......*.%...UP.|
+00000060  01 7f ff ff fb 40 08 00  04 3f 00 00 00 00 00 00  |.....@...?......|
+00000070  02 fe 7f ff ff ff 80 08  82 7e 80 00 00 00 45 44  |.........~....ED|
+00000080  fc 3e ab 66 2e d5 4f ff  ff 3e aa 55 54 9d 4f ff  |.>.f..O..>.UT.O.|
+00000090  fc be ab 66 54 dd 4f ff  fc 9e aa 55 54 94 47 ff  |...fT.O....UT.G.|
+000000a0  fc 82 93 56 24 d5 4f ff  fa 40 80 00 00 00 4f ff  |...V$.O..@....O.|
+000000b0  ed 10 80 00 00 00 4d fb  f8 aa 80 00 00 00 4f bf  |......M.......O.|
+000000c0  f0 8a 83 af b7 ec 4f df  e1 7e 80 00 00 00 4d e7  |......O..~....M.|
+000000d0  20 fe 8f dd be fc 40 10  87 fe 80 00 00 00 40 00  | .....@.......@.|
+000000e0  17 fe 8e fe eb dc 40 00  5f fe 80 00 00 00 49 fc  |......@._.....I.|
+000000f0  ff fe 80 00 00 00 43 fc  7f ee 83 bf d6 ec 41 fc  |......C.......A.|
+00000100  ff fa 80 00 00 00 43 fd  7f fe 8d f7 bf dc 41 fc  |......C.......A.|
+00000110  1f fe 80 00 00 00 43 f8  c8 80 8f 7f eb dc 41 fc  |......C.......A.|
+00000120  20 00 80 00 00 00 41 f8  88 4a 8e df 5b f4 41 04  | .....A..J..[.A.|
+00000130  ff fe 80 00 00 00 40 00  7f fe 8f 5e ef bc 40 00  |......@....^..@.|
+00000140  ff fe 80 00 00 00 4f fd  7f fe 80 00 00 00 4f fc  |......O.......O.|
+00000150  ff f6 80 00 0f fc 4f f8  7f fe 80 00 00 00 4f fc  |......O.......O.|
+00000160  ff fe 7f ff ff ff 8f f4  7f fe 00 00 00 00 0f f8  |................|
+00000170  7e df 00 00 00 00 1f f8  53 ff ec 1f f7 ff fd 78  |~.......S......x|
+00000180  04 4b 20 1f ff ff f7 d8  40 00 04 1f f7 f7 ff f8  |.K .....@.......|
+00000190  90 00 00 1a 9f fd ff f4  7f 90 00 00 05 5e b6 b8  |.............^..|
+000001a0  7f fd 00 10 01 42 11 08  7f ff ff da 40 00 00 00  |.....B......@...|
+000001b0  7f ff ff ff 90 00 00 02  7f ef ff ff 8f ff ff fe  |................|
+000001c0  7f ff ff ff 87 ff ff fd  7e ff ef fe 17 ff ff f4  |........~.......|
+000001d0  f1 a9 1a 2a 87 ff ff fc  60 00 01 00 0f ff ff fc  |...*....`.......|
+000001e0  00 00 00 00 00 af ff f9  00 00 00 00 04 00 24 24  |..............$$|
+000001f0  a9 20 00 00 02 80 00 01  00 02 00 00 00 02 00 00  |. ..............|
+```
+
+Before writing the data to SPI flash ROM, the `flashrom` utility (at least version 1.2 which I have) is hardcoded to reject files that are not a match for the actual flash size.
+
+Here's one way to pad the file out to 1MB (i.e. add 1044480 bytes) with 0xFF (i.e. erased flash byte value) as the filler:
+
+```bash
+dd if=<(cat wolfwall1bit.bin; tr '\0' '\377' < /dev/zero) bs=1 count=1048576 of=wolfwall1bit-1MB.bin
+```
+
+So now we can compare:
+
+```
+$ hexdump -C wolfwall1bit.bin | tail -2
+00000ff0  6a 8a b2 6a 5e 4c 0a 96  22 80 00 20 42 01 00 10  |j..j^L..".. B...|
+00001000
+
+$ hexdump -C wolfwall1bit-1MB.bin | tail -4
+00000ff0  6a 8a b2 6a 5e 4c 0a 96  22 80 00 20 42 01 00 10  |j..j^L..".. B...|
+00001000  ff ff ff ff ff ff ff ff  ff ff ff ff ff ff ff ff  |................|
+*
+00100000
+
+$ wc -c wolfwall1bit-1MB.bin 
+1048576 wolfwall1bit-1MB.bin
+```
+
+Write the file to the SPI flash ROM:
+
+```bash
+cd raybox-zero
+git checkout ew
+cd assets
+SPICHIP=AT25SF081
+SPIPORT=buspirate_spi:dev=/dev/ttyUSB0,spispeed=2M,serialspeed=250000
+time flashrom -c $SPICHIP -p $SPIPORT -w wolfwall1bit-1MB.bin
+```
+
+NOTE: I had pulled /WP low with a 2k2 resistor, expecting this would prevent writing, but it doesn't. From what I understand, the default start-up state of SPI flash ROMs is typically set to ignore /WP... either that, or flashrom is *setting* that mode and forcing the device to ignore /WP and enable writing anyway.
+
+The write succeeded in 121 seconds (but note that all but 1 second of that time *might've* just been the initial read, and subsequent re-read to verify, because flashrom actually compares the data to be written with the data that's already there and only erases/writes the parts which are different):
+
+```
+$ time flashrom -c $SPICHIP -p $SPIPORT -w wolfwall1bit-1MB.bin
+flashrom v1.2 on Linux 6.2.0-33-generic (x86_64)
+flashrom is free software, get the source code at https://flashrom.org
+
+Using clock_gettime for delay loops (clk_id: 1, resolution: 1ns).
+Found Atmel flash chip "AT25SF081" (1024 kB, SPI) on buspirate_spi.
+Reading old flash chip contents... done.
+Erasing and writing flash chip... Erase/write done.
+Verifying flash... VERIFIED.
+```
+
+Read the chip again: `time flashrom -c $SPICHIP -p $SPIPORT -r test.bin`
+
+Compare (I'm paranoid):
+```
+$ md5sum wolfwall1bit-1MB.bin test.bin
+6f66225a0e0f7795d1ac204e013dc103  wolfwall1bit-1MB.bin
+6f66225a0e0f7795d1ac204e013dc103  test.bin
+```
+
+OK, looks good.
+
+I unplugged the Bus Pirate, then I plugged the chip in to raybox-zero:
+
+
+
+
 
 
 # Goals for today
