Update 0162: Screenshot of initial textures test

--- a/0162-2023-10-20.md
+++ b/0162-2023-10-20.md
@@ -244,10 +244,16 @@ $ md5sum wolfwall1bit-1MB.bin test.bin
 
 OK, looks good.
 
+# First test of SPI ROM textures in raybox-zero
+
 I unplugged the Bus Pirate, then I plugged the chip in to raybox-zero:
 
+![Real textures, but needing to be corrected](./i/0162-real-textures-unfixed.jpg)
 
-
+Fixes required:
+*   Rotate textures 90&deg; clockwise (should be done in ROM)
+*   Mirror textures (can be done in Verilog by reversing buffer shift order)
+*   Flip light/dark sides (can be done in Verilog): make side 0 bright, side 1 dark.
 
 
 
