Update 0162: Fix texture orientation and light/dark tint

--- a/0162-2023-10-20.md
+++ b/0162-2023-10-20.md
@@ -255,11 +255,23 @@ Fixes required:
 *   Mirror textures (can be done in Verilog by reversing buffer shift order)
 *   Flip light/dark sides (can be done in Verilog): make side 0 bright, side 1 dark.
 
+I rotated each 64x64 segment of the wall textures image in Photoshop by 90&deg; clockwise, and then regenerated the various binary files, and wrote them to the SPI flash ROM again.
+
+I changed the SPI buffer to shift in from the left instead of the right, to mirror the texture.
+
+I also flipped the light/dark sides extra green bit.
+
+Result looks good:
+
+![Real textures, fixed!](./i/0162-real-textures-fixed.jpg)
+
 
 
 # Goals for today
 
-*   Solder up another flash ROM.
-*   Write some image data to it, of different formats.
+*   Write a util that can take a wall textures PNG and convert it to our required raybox-zero packing with RGB222 colour.
+*   Generate some coloured texture data and put it on the SPI flash ROM.
+*   Implement QSPI mode to read the data into our buffers.
+    NOTE: With a naive RRGGBBXX packing (RGB222 plus 2 dummy bits in each SPI byte) we can lazily get our full colour textures in via a simple QSPI reader in 128 read cycles, but note that we still actually need to set up QSPI mode, the READ command, and the address!
 *   ...TBC...
 *   Add a 'reg' that allows us to specify an address mapping for each wall texture: Host controller can animate/change any given wall texture that way. Could even be used to do scrolling messages.
