Update 0162 with notes re QSPI

--- a/0162-2023-10-20.md
+++ b/0162-2023-10-20.md
@@ -12,6 +12,7 @@ Yesterday was a day off, day prior was finishing my presentation of raybox-zero 
 
 *   [raybox-zero doing basic SPI](#raybox-zero-doing-basic-spi) -- I actually got this working a couple of days ago but didn't document it at the time.
 *   Soldered a brand new [AT25SF081B-SSHB-T](https://www.digikey.com.au/en/products/detail/renesas-electronics-operations-services-limited/AT25SF081B-SSHB-T/12180765) (8Mbit SPI/Quad SPI Flash ROM) on a breakout board so I can try writing to it with `flashrom` and then use it for image data and other tests in raybox-zero. NOTE: This chip is narrower (3.9mm plastic body width) than the one I used last time in [0149](./0149-2023-09-30.md) (5.3mm width, I think).
+*   [I wrote a util (texy.py)](https://github.com/algofoogle/raybox-zero/blob/ew/utils/texy.py) that can take a wall textures PNG and convert it to our required raybox-zero packing with RGB222 colour.
 
 # raybox-zero doing basic SPI
 
@@ -266,12 +267,43 @@ Result looks good:
 ![Real textures, fixed!](./i/0162-real-textures-fixed.jpg)
 
 
+# Implementing QSPI
+
+*   For now I'll do BGRX2222 packing, so that every texel is 1 byte. This will keep it simpler initially with QSPI nibbles.
+*   In QSPI mode, some pins suddenly become outputs, so we have to be careful about contention. I could use resistors just for safety; 330R would limit current to 10mA max. The main pin to worry about is MOSI: If the FPGA tries to drive it when it's in QSPI mode, we'll have a problem.
+*   These are the pins we're interested in:
+    | Pin | Normal | QSPI |
+    |-|-|-|
+    | 1 | /CS   | /CS |
+    | 2 | MISO  | io1 |
+    | 3 | /WP   | io2 |
+    | 4 | GND   | GND |
+    | 5 | MOSI  | io0 |
+    | 6 | SCLK  | SCLK |
+    | 7 | /HOLD | io3 |
+    | 8 | VCC   | VCC |
+*   When Status Register 2's QE (Quad Enable) bit is high, QSPI comms is enabled. Does this mean inputs are quad, too? Ahh QE is just for Quad I/O (not Quad Read)?
+    >   The Quad Enable bit (QE) of the Status Register must be set to enable for the Quad-I/O Read Array instruction.
+*   There's a distinction between "Quad Output Read (1-1-4)" and "Quad I/O Read (1-4-4)". I think the former means the command and address are both single-speed, while the latter means the command is single-speed and the address and data are then both quad-speed:
+    >   The **AT25QF128A** supports Quad 1/0 (1-4-4) transfers, which enhance throughput over the standard SPI mode.
+    >   This mode transfers the command on the Sl pin, but the address and data are transferred on the Sl, SO, /WP, and
+    >   /HOLD pins. This means that only a quarter of the number of clocks are required to transfer the address and data.
+    >   With the Quad 1/0 Read Array command, the Sl, /WP, /HOLD, and SO pins become inputs during the address
+    >   transfer, and switch to outputs during the data transfer.
+    NOTE: I don't have the AT25QF128A chip, so I can probably ignore this Quad I/O Read mode, and just focus on Quad Output Read.
+*   It looks like we want command 6Bh (Quad Output Fast Read). Its sequence is:
+    1.  Send command 6Bh at normal speed.
+    2.  Send address A23..0 at normal speed.
+    3.  Send 1 more dummy byte at normal speed. NOTE: This is when we could switch MOSI to HiZ.
+    4.  On the falling edge of the LSB of that dummy byte, expect all 4 IOs to be asserted as outputs by the chip, and stay that way until /CS is released.
+*   Thus: We need 40 preamble clocks. That should be fine. We will then do 128 clocks to read the BGRX2222 data.
+*   Can our chip also do "Word Read Quad I/O" (E7h)? Does it need to?
+*   NOTE: "The /WP pin is internally pulled-high and can be left floating if not used."
+
 
 # Goals for today
 
-*   Write a util that can take a wall textures PNG and convert it to our required raybox-zero packing with RGB222 colour.
 *   Generate some coloured texture data and put it on the SPI flash ROM.
 *   Implement QSPI mode to read the data into our buffers.
     NOTE: With a naive RRGGBBXX packing (RGB222 plus 2 dummy bits in each SPI byte) we can lazily get our full colour textures in via a simple QSPI reader in 128 read cycles, but note that we still actually need to set up QSPI mode, the READ command, and the address!
-*   ...TBC...
 *   Add a 'reg' that allows us to specify an address mapping for each wall texture: Host controller can animate/change any given wall texture that way. Could even be used to do scrolling messages.
