0163: Working on QSPI - progress update

--- a/0163-2023-10-22.md
+++ b/0163-2023-10-22.md
@@ -5,3 +5,31 @@
 | [**0162**-2023-10-20.md](./0162-2023-10-20.md) | *Next journal TBA* |
 
 # Working on QSPI
+
+*   Create `qspi` branch on `tt05-vga-spi-rom` to try tackling QSPI.
+*   In it, include a `vga_mode` option for selecting between 640x480@60Hz and 1440x900@60Hz timing.
+
+# Goals
+
+*   Verify `vga_mode` switch works. For each of mode 0 and mode 1, test it with these clocks:
+    *   25.1750MHz (exact VGA)
+    *   26.6175MHz (1440x900@60Hz-div-4)
+    *   25.0000MHz (approx. VGA)
+    *   24.0000MHz (slow VGA)
+    *   24.7500MHz (800x600@75-div-2)
+    *   ...and try these on my 3 monitors plus VGA2HDMI?
+*   Get QSPI reads working in tt05-vga-spi-rom
+*   Add QSPI reads to raybox-zero
+
+# Next steps
+
+*   Make it so the VGA timing parameters in `vga_sync.v` are just registers that only update at the end of a frame.
+*   Find out the correct SDC config for an Altera Cyclone IV PLL-generated clock source.
+*   Consider replacing `spiflash` with the Winbond model that Tholin used.
+
+# Notes
+
+*   DE0-Nano 4 DIP switches:
+    >   The DE0-Nano board contains a 4 dip switches. A DIP switch provides, to the FPGA, a high logic level when it is in the DOWN position, and a low logic level when in the UPPER position.
+    *   Per [DE0-Nano schematic](https://wiki.bu.ost.ch/infoportal/_media/fpga/boards/de0_nano/de0-nano-schematic.pdf#page=9), when the switches are open (or "OFF"), they are pulled high. Otherwise, when "ON" they are grounded.
+    *   I'm using this to select `vga_mode` on switch 0. When in the "upper" position it will select vga_mode 0 (low input), else in "DOWN" poition it will select vga_mode 1.
