--- a/0163-2023-10-22.md
+++ b/0163-2023-10-22.md
@@ -6,20 +6,35 @@
 
 # Working on QSPI
 
-*   Create `qspi` branch on `tt05-vga-spi-rom` to try tackling QSPI.
-*   In it, include a `vga_mode` option for selecting between 640x480@60Hz and 1440x900@60Hz timing.
+*   Created `qspi` branch on `tt05-vga-spi-rom` to try tackling QSPI.
+    *   I included a `vga_mode` option for selecting between 640x480@60Hz and 1440x900@60Hz timing. Ideal clock for this (at least for my testing) is ~26.6175MHz, because in Mode 1 this gets very clear 1440x900@60, and in Mode 0 it still works OK as 640x480@63.
+    *   I ended up using 26.6175MHz (actually 26.620370MHz is nearest the PLL can get) in the repo.
+    *   Merged vga_mode stuff from the qspi branch into main and tagged it [0.2](https://github.com/algofoogle/tt05-vga-spi-rom/releases/tag/0.2) -- new update to [my TT05 submission #192](https://app.tinytapeout.com/projects/192).
 
 # Goals
 
-*   Verify `vga_mode` switch works. For each of mode 0 and mode 1, test it with these clocks:
-    *   25.1750MHz (exact VGA)
-    *   26.6175MHz (1440x900@60Hz-div-4)
-    *   25.0000MHz (approx. VGA)
-    *   24.0000MHz (slow VGA)
-    *   24.7500MHz (800x600@75-div-2)
-    *   ...and try these on my 3 monitors plus VGA2HDMI?
 *   Get QSPI reads working in tt05-vga-spi-rom
 *   Add QSPI reads to raybox-zero
+
+# Attempts at QSPI
+
+Working in tt05-vga-spi-rom (tt05vsr), let's start with a naive approach to switch to QSPI read command 6Bh half-way down the screen, without any setup...
+
+**We must make sure we tristate MOSI!**
+
+I'll use my "known good" [AT25SF081B](https://www.digikey.com.au/en/products/detail/renesas-electronics-operations-services-limited/AT25SF081B-SSHB-T/12180765) that I got from DigiKey because its [datasheet](https://www.renesas.com/us/en/document/dst/at25sf081b-datasheet) and behaviour should be proven.
+
+
+
+
+
+
+
+# Compare SPI flash ROM datasheets re Quad Enable (QE bit)
+
+[Winbond's "Verilog Model for W25Q128JVxIM Serial Flash Memory"](https://github.com/89Mods/tt3p5-as1802/blob/main/src/spiflash/W25Q128JVxIM.v) shows that [command 6Bh](https://github.com/89Mods/tt3p5-as1802/blob/b0acd85b033435858e55c4165421192174aa5f31/src/spiflash/W25Q128JVxIM.v#L152) will [require the Status Register QE bit to be set](https://github.com/89Mods/tt3p5-as1802/blob/b0acd85b033435858e55c4165421192174aa5f31/src/spiflash/W25Q128JVxIM.v#L999-L1003)
+
+
 
 # Next steps
 
@@ -29,7 +44,53 @@
 
 # Notes
 
+*   From a 50MHz clock source, DE0-Nano PLL can hit 25.170068MHz... not exactly 25.1750MHz.
+*   25.170MHz clock source (as above):
+    *   Mode 0: 640x480@60, i.e. 25,170,000/800/525 ~= 59.93Hz
+    *   Mode 1: 1152x870@57 syncs on my HP L1908wm monitor
+*   26.620370MHz (nearest the PLL can get to 26.61750MHz):
+    *   Mode 0: 640x480@63 works fine
+    *   Mode 1: 1440x900@60 works fine. Very clear.
+*   26.5MHz:
+    *   Mode 0: 640x480@63 works fine
+    *   Mode 1: 1440x900@60
+*   26.3MHz:
+    *   Mode 0: 640x480@63 works fine
+    *   Mode 1: 1440x900@59
+*   26.0MHz:
+    *   Mode 0: 640x480@63 works fine
+    *   Mode 1: 1152x870@59
+*   25.0MHz:
+    *   Mode 0: 640x480@59??
+    *   Mode 1: 1152x870@56
+*   24.750MHz: NOTE: This frequency matches 800x600@75-div-2
+    *   Mode 0: 640x480@59 works fine as above.
+    *   Mode 1: 1152x870@56
+*   24.0MHz:
+    *   Mode 0: 640x480@57, **direct MISO is delayed by 1 pixel**.
+    *   Mode 1: 1152x870@54, direct MISO is *sort of* delayed as expected.
+*   23.0MHz:
+    *   Mode 0: 640x480@55 works fine
+    *   Mode 1: 1152x870@52
+*   20.0MHz:
+    *   Mode 0: ?? - Displays an image (wide aspect) but doesn't like it. Complains that input signal is out of range and won't show what it is.
+    *   Mode 1: No sync
+*   27.0MHz:
+    *   Mode 0: 640x480@64 works fine
+    *   Mode 1: 1440x900@61
+*   28.0MHz:
+    *   Mode 0: 640x480@67 shows some MISO delays
+    *   Mode 1: 1152x870@63
+*   30.0MHz:
+    *   Mode 0: 640x480@71 shows some MISO delays
+    *   Mode 1: 1152x**900**@67
 *   DE0-Nano 4 DIP switches:
     >   The DE0-Nano board contains a 4 dip switches. A DIP switch provides, to the FPGA, a high logic level when it is in the DOWN position, and a low logic level when in the UPPER position.
     *   Per [DE0-Nano schematic](https://wiki.bu.ost.ch/infoportal/_media/fpga/boards/de0_nano/de0-nano-schematic.pdf#page=9), when the switches are open (or "OFF"), they are pulled high. Otherwise, when "ON" they are grounded.
     *   I'm using this to select `vga_mode` on switch 0. When in the "upper" position it will select vga_mode 0 (low input), else in "DOWN" poition it will select vga_mode 1.
+*   Elgato Cam Link 4K doesn't support 1440x900 resolution:
+
+    ![Cam Link "4K Capture Utility" complaining about 1440x900 resolution](i/0163-camlink-900-error.png)
+
+    Supported resolutions are listed: [here](https://help.elgato.com/hc/en-us/articles/360027963272-Cam-Link-4K-Technical-Specifications)
+*   Blue cheapo USB-C HDMI capture dongle can capture it, but 1440x900 isn't one of its native output resolutions, so it scales instead to whatever output mode you select (e.g. 1920x1080) and overall there's a lot of blur and chroma subsampling.
