Minor update to 0163

--- a/0163-2023-10-22.md
+++ b/0163-2023-10-22.md
@@ -21,9 +21,10 @@
 
 ## Plan of attack
 
-*   Test tt05vsr as-is with 1k&ohm; resistor inline with MOSI (and optionally MISO; good if we want to try full Quad I/O later). Get rid of existing /WP and /HOLD resistors (they have internal pullups).
+*   Get rid of existing /WP and /HOLD resistors (they have internal pullups).
+*   Test tt05vsr as-is with 1k&ohm; resistor inline with MOSI (and optionally MISO; good if we want to try full Quad I/O later). **SEEMS GOOD** with 1k on MOSI; data looks right, I think. **NO GOOD** with 1k on MISO: creates a delayed and unstable data read signal, maybe because of bad rise time? 270R seems to do OK on MISO; makes it a tiny bit mucky, but seems valid. We can ignore it for now, anyway.
 *   Verify QE non-volatile behaviour:
-    *   Use Bus Pirate to manually read AT25SF081B.
+    *   Use Bus Pirate to manually read each of BG25Q80 and AT25SF081B.
     *   BP read SR1 (command 05)
     *   BP read SR2 (command 35)
     *   BP set QE: WEN (06), WSR2 (31) + 02 (QE bit asserted).
